tests/negative/gold/prefixed_assign4_test.gold
tests/negative/prefixed_assign4_test.toit:6:6: error: Can't assign to final global
  pa.final_global = 3
     ^~~~~~~~~~~~
Compilation failed.
